--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -236,10 +236,10 @@
         "message": "Taste zum Überspringen eines Segments festlegen"
     },
     "setStartSponsorShortcut": {
-        "message": "Eine Taste zum Markieren des Startpunkts eines Segments festlegen"
+        "message": "Taste für das Starten eines Segments festlegen"
     },
     "setSubmitKeybind": {
-        "message": "Eine Taste für das Übermitteln festlegen"
+        "message": "Taste für das Einsenden festlegen"
     },
     "keybindDescription": {
         "message": "Zum Festlegen eine Taste drücken"
@@ -517,7 +517,7 @@
         "message": "Musikvideoteile ohne Musik"
     },
     "category_music_offtopic_description": {
-        "message": "Nur für den Einsatz in Musikvideos."
+        "message": "Nur für die Verwendung in Musikvideos. Dies sollte nur für Abschnitte von Musikvideos verwendet werden, die noch nicht von einer anderen Kategorie abgedeckt sind."
     },
     "category_music_offtopic_short": {
         "message": "Musikvideoteile ohne Musik"
