--- a/public/_locales/ms/messages.json
+++ b/public/_locales/ms/messages.json
@@ -517,7 +517,7 @@
         "message": "Muzik: Bahagian Bukan Muzik"
     },
     "category_music_offtopic_description": {
-        "message": "Hanya untuk digunakan dalam video muzik. Ini termasuk perkenalan atau outro dalam video muzik."
+        "message": "Hanya untuk digunakan dalam video muzik. Ini hanya harus digunakan untuk bahagian video muzik yang belum dilindungi oleh kategori lain."
     },
     "category_music_offtopic_short": {
         "message": "Bukan Muzik"
@@ -593,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "Nampaknya ada sesuatu yang menyekat kemampuan SponsorBlock untuk mendapatkan data video. Ini mungkin penyekat iklan anda. Sila periksa https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "Sekiranya anda tidak dapat menyelesaikannya, maka matikan tetapan 'Abaikan video tidak tersenarai / peribadi', kerana SponsorBlock tidak dapat mengambil maklumat keterlihatan untuk video ini"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Sekiranya ini terus berlaku, ini mungkin disebabkan oleh penyekat iklan anda. Sila periksa https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
