--- a/public/_locales/ta/messages.json
+++ b/public/_locales/ta/messages.json
@@ -517,7 +517,7 @@
         "message": "இசை: இசை அல்லாத பிரிவு"
     },
     "category_music_offtopic_description": {
-        "message": "இசை வீடியோக்களில் பயன்படுத்த மட்டுமே. இசை வீடியோக்களில் அறிமுகங்கள் அல்லது அவுட்ரோக்கள் இதில் அடங்கும்."
+        "message": "இசை வீடியோக்களில் மட்டுமே பயன்படுத்த வேண்டும். இது ஏற்கனவே மற்றொரு வகையால் மூடப்பட்டிருக்கும் இசை வீடியோக்களின் பிரிவுகளுக்கு மட்டுமே பயன்படுத்தப்பட வேண்டும்."
     },
     "category_music_offtopic_short": {
         "message": "இசை அல்லாதது"
@@ -593,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "வீடியோ தரவைப் பெறுவதற்கான ஸ்பான்சர் பிளாக் திறனை ஏதோ தடுக்கிறது என்று தெரிகிறது. இது உங்கள் விளம்பர தடுப்பாளராக இருக்கலாம். Https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests ஐ சரிபார்க்கவும்"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "இதை நீங்கள் தீர்க்க முடியாவிட்டால், 'பட்டியலிடப்படாத / தனிப்பட்ட வீடியோக்களைப் புறக்கணிக்கவும்' என்ற அமைப்பை முடக்கு, ஏனெனில் இந்த வீடியோவுக்கான தெரிவுநிலை தகவலை ஸ்பான்சர் பிளாக் பெற முடியவில்லை"
     },
     "itCouldBeAdblockerIssue": {
         "message": "இது தொடர்ந்து நடந்தால், அது உங்கள் விளம்பர தடுப்பாளரால் ஏற்படலாம். Https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests ஐ சரிபார்க்கவும்"
