--- a/public/_locales/fr/messages.json
+++ b/public/_locales/fr/messages.json
@@ -138,7 +138,7 @@
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
-        "message": "Astuce : Vous pouvez configurer des raccourcis clavier dans les options"
+        "message": "Astuce: Vous pouvez configurer des raccourcis clavier dans les options"
     },
     "clearTimesButton": {
         "message": "Supprimer les temps"
@@ -195,7 +195,7 @@
         "message": "Activer le suivi du nombre de sauts de segments"
     },
     "whatViewTracking": {
-        "message": "Cette fonctionnalité permet de suivre les segments que vous avez sautés pour faire savoir aux utilisateurs à quel point leur soumission a aidé les autres et est utilisée comme donnée avec les votes positifs pour s'assurer que des spams n'entre pas dans la base de données. L'extension envoie un message au serveur chaque fois que vous sautez un segment. Il est à espérer que la plupart des gens ne modifient pas ce paramètre pour que les données sur le nombre d'affichage soient exacts :)"
+        "message": "Cette fonctionnalité permet de suivre les segments que vous avez sautés pour faire savoir aux utilisateurs à quel point leur soumission a aidé les autres et est utilisée comme donnée avec les votes positifs pour s'assurer que des spams n'entrent pas dans la base de données. L'extension envoie un message au serveur chaque fois que vous sautez un segment. Il est à espérer que la plupart des gens ne modifient pas ce paramètre pour que les données sur le nombre d'affichages soient exactes. :)"
     },
     "enableQueryByHashPrefix": {
         "message": "Requête avec seulement le début du hash"
@@ -496,7 +496,7 @@
         "message": "Générique de fin"
     },
     "category_outro_description": {
-        "message": "Crédits ou quand les annotations Youtube de fin apparaissent. Pas pour les conclusions qui contiennent des informations."
+        "message": "Crédits ou écrans de fin YouTube. Pas pour les conclusions contenant des informations."
     },
     "category_interaction": {
         "message": "Rappel d'interaction (abonnement)"
@@ -515,9 +515,6 @@
     },
     "category_music_offtopic": {
         "message": "Musique : Segment non-musical"
-    },
-    "category_music_offtopic_description": {
-        "message": "A utiliser uniquement dans les vidéos musicales. Cela inclut les introductions ou les fins dans les vidéos."
     },
     "category_music_offtopic_short": {
         "message": "Hors musique"
@@ -613,7 +610,7 @@
         "message": "Mauvaise catégorie"
     },
     "nonMusicCategoryOnMusic": {
-        "message": "Cette vidéo est catégorisée comme de la musique. Êtes-vous sûr qu'elle est sponsorisée ? S'il s'agit en fait d'un \"segment non-musical\", allez dans les options de l'extension et activez cette catégorie. Ensuite, vous pourrez soumettre ce segment en tant que \"segment non-musical\" au lieu de sponsor. Lisez les instructions en cas de confusion."
+        "message": "Cette vidéo est catégorisée comme de la musique. Êtes-vous sûr qu'elle est sponsorisée? S'il s'agit en fait d'un \"Segment non musical\", allez dans les options de l'extension et activez cette catégorie. Ensuite, vous pourrez soumettre ce segment en tant que \"Segment non musical\" au lieu de sponsor. Lisez les instructions en cas de confusion."
     },
     "multipleSegments": {
         "message": "Plusieurs segments"
