--- a/public/_locales/ml/messages.json
+++ b/public/_locales/ml/messages.json
@@ -517,7 +517,7 @@
         "message": "സംഗീതം: സംഗീതേതര വിഭാഗം"
     },
     "category_music_offtopic_description": {
-        "message": "സംഗീത വീഡിയോകളിൽ ഉപയോഗിക്കാൻ മാത്രം. സംഗീത വീഡിയോകളിലെ ആമുഖങ്ങളോ ro ട്ട്‌റോകളോ ഇതിൽ ഉൾപ്പെടുന്നു."
+        "message": "സംഗീത വീഡിയോകളിൽ മാത്രം ഉപയോഗിക്കുന്നതിന് മാത്രം. ഇതിനകം മറ്റൊരു വിഭാഗത്തിൽ ഉൾപ്പെടാത്ത സംഗീത വീഡിയോകളുടെ വിഭാഗങ്ങൾക്കായി മാത്രമേ ഉപയോഗിക്കാവൂ."
     },
     "category_music_offtopic_short": {
         "message": "നോൺ-മ്യൂസിക്"
@@ -593,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "വീഡിയോ ഡാറ്റ നേടാനുള്ള സ്പോൺസർബ്ലോക്കിന്റെ കഴിവ് എന്തോ തടയുന്നുവെന്ന് തോന്നുന്നു. ഇത് മിക്കവാറും നിങ്ങളുടെ പരസ്യ ബ്ലോക്കറാണ്. Https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests പരിശോധിക്കുക"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "നിങ്ങൾക്ക് ഇത് പരിഹരിക്കാൻ കഴിയുന്നില്ലെങ്കിൽ, ഈ ലിസ്റ്റിനായുള്ള ദൃശ്യപരത വിവരങ്ങൾ വീണ്ടെടുക്കാൻ സ്പോൺസർബ്ലോക്കിന് കഴിയാത്തതിനാൽ 'ലിസ്റ്റുചെയ്യാത്ത / സ്വകാര്യ വീഡിയോകൾ അവഗണിക്കുക' എന്ന ക്രമീകരണം അപ്രാപ്തമാക്കുക"
     },
     "itCouldBeAdblockerIssue": {
         "message": "ഇത് സംഭവിച്ചുകൊണ്ടിരിക്കുകയാണെങ്കിൽ, ഇത് നിങ്ങളുടെ പരസ്യ ബ്ലോക്കർ കാരണമാകാം. Https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests പരിശോധിക്കുക"
