--- a/public/_locales/te/messages.json
+++ b/public/_locales/te/messages.json
@@ -517,7 +517,7 @@
         "message": "సంగీతం: నాన్-మ్యూజిక్ విభాగం"
     },
     "category_music_offtopic_description": {
-        "message": "మ్యూజిక్ వీడియోలలో ఉపయోగించడానికి మాత్రమే. మ్యూజిక్ వీడియోలలో పరిచయాలు లేదా ro ట్‌రోస్ ఇందులో ఉన్నాయి."
+        "message": "మ్యూజిక్ వీడియోలలో మాత్రమే ఉపయోగం కోసం. ఇది ఇప్పటికే మరొక వర్గం ద్వారా కవర్ చేయని సంగీతం వీడియోల విభాగాలకు మాత్రమే ఉపయోగించాలి."
     },
     "category_music_offtopic_short": {
         "message": "నాన్-మ్యూజిక్"
@@ -593,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "వీడియో డేటాను పొందే స్పాన్సర్బ్లాక్ సామర్థ్యాన్ని ఏదో అడ్డుకుంటున్నట్లు కనిపిస్తోంది. ఇది బహుశా మీ యాడ్ బ్లాకర్. దయచేసి https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests తనిఖీ చేయండి"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "మీరు దీన్ని పరిష్కరించలేకపోతే, స్పాన్సర్బ్లాక్ ఈ వీడియో కోసం దృశ్యమాన సమాచారాన్ని తిరిగి పొందలేకపోతున్నందున, 'జాబితా చేయని / ప్రైవేట్ వీడియోలను విస్మరించండి' సెట్టింగ్‌ను నిలిపివేయండి"
     },
     "itCouldBeAdblockerIssue": {
         "message": "ఇది జరుగుతూ ఉంటే, అది మీ ప్రకటన బ్లాకర్ వల్ల సంభవించవచ్చు. దయచేసి https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests తనిఖీ చేయండి"
