--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -113,10 +113,10 @@
         "message": "Bunu göndermek istediğinize emin misiniz?"
     },
     "whitelistChannel": {
-        "message": "Kanalı beyaz listeye ekle"
+        "message": "Kanala izin ver"
     },
     "removeFromWhitelist": {
-        "message": "Kanalı beyaz listeden çıkar"
+        "message": "Kanalı izin listesinden çıkar"
     },
     "voteOnTime": {
         "message": "Bir Kısmı Oyla"
@@ -516,9 +516,6 @@
     "category_music_offtopic": {
         "message": "Müzik: Müzik Olmayan Bölüm"
     },
-    "category_music_offtopic_description": {
-        "message": "Sadece müzik klipleri içindir. Buna kliplerin başlarında ve sonlarında şarkı bulunmayan kısımlar dahildir."
-    },
     "category_music_offtopic_short": {
         "message": "Müzik Olmayan Bölüm"
     },
@@ -593,6 +590,9 @@
     },
     "adblockerIssue": {
         "message": "Bir şeyin SponsorBlock'un video bilgisi almasını engelliyor gibi görünüyor. Bu reklam engelleyiciniz olabilir. Lütfen şu adresi kontrol edin https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "Bunu çözümleyemiyorsanız \"Liste dışı/gizli videoları göz ardı et\" seçeneğini kapatın, SponsorBlock bu videonun gizlilik bilgisini alamıyor"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Bunu sürekli yaşıyorsanız, reklam engelleyiciniz tarafından gerçekleşiyor olabilir. https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests adresini kontrol edin."
