--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -517,7 +517,7 @@
         "message": "音乐：非音乐部分"
     },
     "category_music_offtopic_description": {
-        "message": "仅用于音乐视频。包括音乐视频中的开头或结尾。"
+        "message": "仅用于音乐视频。此分类只能用于音乐视频中未包括于其他分类的部分。"
     },
     "category_music_offtopic_short": {
         "message": "无音乐"
@@ -593,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "似乎某些东西正在阻止 SponsorBlock 获取视频数据的功能。它很可能是您的广告拦截器。请查看 https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "如果您无法解决这个问题，请禁用“忽略未公开列出/私有视频”设置，因为 SpongorBlock 无法检索此视频是否可见"
     },
     "itCouldBeAdblockerIssue": {
         "message": "如果这种情况不断发生，它可能是由您的广告拦截器引起的。请查看 https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
